--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,43 +1,43 @@
-# GDG Website Backend Environment Configuration
-
-# ==================== SERVER CONFIGURATION ====================
-PORT=4565
+# ==================== NODE ENVIRONMENT ====================
 NODE_ENV=development
+PORT=4565
 
-# Frontend URL for CORS (update based on where frontend is hosted)
-FRONTEND_URL=http://localhost:5000
+# ==================== DATABASE ====================
+MONGODB_URI=mongodb+srv://pranavnere647_db_user:PranavNere@gdgweb.ycog6lf.mongodb.net/
+# For MongoDB Atlas:
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/gdg-csmu
 
-# ==================== DATABASE CONFIGURATION ====================
-# MongoDB Atlas Connection String
-# Format: mongodb+srv://username:password@cluster-name.mongodb.net/database-name?appName=AppName
-# Replace the values below with your actual MongoDB credentials
-MONGODB_URI=mongodb+srv://pranavnere647_db_user:PranavNere@gdgweb.ycog6lf.mongodb.net/gdg_website?appName=GDGWEB
+# ==================== JWT AUTHENTICATION ====================
+JWT_SECRET=your_super_secret_jwt_key_here_change_this_in_production
+JWT_EXPIRE=7d
+REFRESH_TOKEN_SECRET=your_super_secret_refresh_token_key_here_change_this
+REFRESH_TOKEN_EXPIRE=30d
 
-# ==================== JWT CONFIGURATION ====================
-# Generate strong random secrets for production!
-# You can use: openssl rand -hex 32
-JWT_SECRET=your_jwt_secret_key_change_this_in_production
-REFRESH_TOKEN_SECRET=your_refresh_token_secret_change_this_in_production
+# ==================== EMAIL CONFIGURATION ====================
+# Gmail Configuration
+EMAIL_SERVICE=gmail
+EMAIL_USER=neresarika@gmail.com
+EMAIL_PASSWORD=imyl gsae qtob spxi
 
-# ==================== EMAIL CONFIGURATION (Gmail) ====================
-# 1. Enable 2-Factor Authentication on your Google Account
-# 2. Go to: https://myaccount.google.com/apppasswords
-# 3. Select "Mail" and "Windows Computer"
-# 4. Copy the 16-character password below
+# Or use other email services:
+# EMAIL_SERVICE=outlook
+# EMAIL_SERVICE=yahoo
+# EMAIL_SERVICE=sendgrid
 
-EMAIL_USER=your_gmail@gmail.com
-EMAIL_PASSWORD=16_character_app_password_here
+# Note: For Gmail, use App Passwords (not regular password)
+# Generate at: https://myaccount.google.com/apppasswords
 
-# ==================== CORS CONFIGURATION ====================
-# Allowed origins for frontend requests
-CORS_ORIGIN=http://localhost:5000
+# ==================== FRONTEND URL ====================
+FRONTEND_URL=http://localhost:5500
 
-# ==================== TOKEN EXPIRY ====================
-ACCESS_TOKEN_EXPIRY=24h
-REFRESH_TOKEN_EXPIRY=7d
+# ==================== API CONFIGURATION ====================
+API_BASE_URL=http://localhost:4565/api
 
-# ==================== PRODUCTION SETTINGS ====================
-# When deploying to production, set:
-# NODE_ENV=production
-# FRONTEND_URL=https://your-frontend-domain.com
-# And generate new, strong secrets for JWT
+# ==================== OPTIONAL: CLOUD STORAGE ====================
+# AWS_ACCESS_KEY_ID=your_aws_access_key
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# AWS_S3_BUCKET=your_bucket_name
+
+# ==================== OPTIONAL: EXTERNAL SERVICES ====================
+# TWILIO_ACCOUNT_SID=your_twilio_sid
+# TWILIO_AUTH_TOKEN=your_twilio_token
