--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,43 @@
 {
-  "name": "gdg-website-backend",
+  "name": "gdg-csmu-backend",
   "version": "1.0.0",
-  "description": "Backend for GDG Website with email-based OTP authentication",
-  "license": "ISC",
-  "author": "",
-  "type": "module",
-  "main": "index.js",
+  "description": "Production-ready backend for GDG CSMU website",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest --detectOpenHandles",
+    "test:watch": "jest --watch"
   },
+  "keywords": [
+    "gdg",
+    "csmu",
+    "event-management",
+    "authentication",
+    "api"
+  ],
+  "author": "GDG CSMU",
+  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^4.21.0",
-    "express-rate-limit": "^8.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.2",
-    "nodemailer": "^8.0.1",
-    "nodemon": "^3.1.10",
-    "uuid": "^11.1.0",
-    "validator": "^13.11.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.0.0",
+    "express-validator": "^7.0.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongodb": "^7.1.0",
+    "mongoose": "^9.2.2",
+    "morgan": "^1.10.0",
+    "nodemailer": "^8.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
