--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,11 @@
-.env
-package-lock.json
 node_modules/
+.env
+.env.local
+.env.*.local
+dist/
+build/
+.DS_Store
+*.log
+yarn-error.log
+.vscode/
+.idea/
