--- a/backend/package.json
+++ b/backend/package.json
@@ -1,43 +1,25 @@
 {
-  "name": "gdg-csmu-backend",
+  "name": "gdgweb-backend",
   "version": "1.0.0",
-  "description": "Production-ready backend for GDG CSMU website",
+  "description": "GdGWeB Backend with Authentication",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest --detectOpenHandles",
-    "test:watch": "jest --watch"
+    "dev": "nodemon server.js"
   },
-  "keywords": [
-    "gdg",
-    "csmu",
-    "event-management",
-    "authentication",
-    "api"
-  ],
-  "author": "GDG CSMU",
-  "license": "MIT",
+  "keywords": ["express", "authentication", "mongodb"],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.0.0",
-    "express-validator": "^7.0.0",
-    "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.3",
-    "mongodb": "^7.1.0",
-    "mongoose": "^9.2.2",
-    "morgan": "^1.10.0",
-    "nodemailer": "^8.0.1"
+    "mongoose": "^7.5.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "express-validator": "^7.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
   }
 }
